# kalvin-lm

./: .gitignore  AGENTS.md  CONTEXT.md  IMPLEMENTATION_PLAN.md  KB-320-notes.md  KB-334-notes.md  KS_INTRO.md  README.md  data  harness.yaml  notes.txt  pyproject.toml  test  training.harness.yaml
.claude/: CLAUDE.md
.pi/: settings.json
auto-tune/: CONTINUE.md
curricula/: cascade-pressure.md  conflict-drill.md  first-steps-s2.md  first-steps.md  mhall-svo-equivalence.md  mhall-svo-single.md  s3-auto-countersign.md
docs/: ARCHIVE.md  cascade-development.md  dialogue-rationalisation-behaviours.md  extended-cogitation.md  kalvin-intro.md  kalvin-introduction.md  kalvin-origin.md  kalvin-vision.md  kscript-intro.md  learning-and-training.md  learning.md  notes.txt  overview.md  roadmap.md  spec-plan-implement.md  spec-plan-proposal.md  tokenizer-significance.md  training-loop.md  training-schedule.md
openspec/: agent.md  kline.md  model.md  signature.md  significance.md  tokenizer.md
plans/: docs-reset-2026-06-15.md  implement-bare-bitwise-cleanup.md  implement-dialogue-driven-training.md  implement-harness-server.md  implement-kalvin.md  implement-kscript.md  implement-nlp-binding.md  implement-nlp-tokenizer-extraction.md  implement-peer-dialogue.md  implement-rationalise-trainer-significance.md  implement-rationalising-trainee.md  implement-signature-zero-sentinel-removal.md  implement-signifier.md  implement-synthesizing-trainer.md  implement-unpack.md  nlp-pipeline.md  role-based-routing.md  topic-based-routing.md
scripts/: clean-worktrees.sh  dialogue-mhall.json  dialogue-rationalisation-behaviours.md  dialogue-wdmh.json  dialogue_number_turns.py  dialogue_run.py  dialogue_runner.py  encode_text.py  kalvin_test.py  ks_run.py  ks_test.py  ks_verify.py  rebuild-tokenizer-data.sh  train_tokenizer.py
specs/: agent.md  auto-tune.md  cascade-control.md  cogitator-drain.md  cogitator.md  countersign-resolution.md  curriculum.md  dialogue-cogitation.md  dialogue-driven-training.md  dialogue-runner.md  expand-robustness.md  harness-server.md  harness.md  kline.md  kscript-nlp-binding.md  kscript-nlp.md  kscript.md  kvalue.md  model.md  nlp-curriculum-compat.md  nlp-first-curriculum-annotations.md  nlp_tokenizer.md  overview.md  peer-dialogue.md  reactive-delegation.md  reactive-scaffolding.md  s3-auto-countersign.md  signature.md  significance-normalization.md  significance.md  signifier.md  stm.md  stub-kagent.md  supervisor-decision.md  tokenizer.md  trainer-satisfaction.md  training-log.md
tests/: __init__.py  conftest.py  test_abstract.py  test_adapter.py  test_agent.py  test_agent_codec.py  test_agent_signify.py  test_ast.py  test_ast_emitter.py  test_ast_emitter_nlp.py  test_auto_tune_cli.py  test_auto_tune_events.py  test_auto_tune_integration.py  test_auto_tune_lifecycle.py  test_auto_tune_orchestrate.py  test_auto_tune_reset.py  test_auto_tune_session.py  test_auto_tune_snapshots.py  test_auto_tune_supervisor.py  test_binding_resolver.py  test_binding_scope.py  test_bus.py  test_cascade_control.py  test_code_mts_rename.py  test_cogitation.py  test_cogitator_drain.py  test_cogitator_handler.py  test_commands.py  test_compiler_nlp_integration.py  test_conftest.py  (+105 more)
(+480 files in other folders)
