[project]
name = "kalvin"
version = "0.1.0"
description = "A learning system that stores and retrieves memory as structured klines"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "tqdm>=4.66.0",
    "textual>=8.0.0",
    "textual-dev>=1.8.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.7.0",
    "pyarrow>=15.0.0",
    "spacy[apple]>=3.8.11",
    "watchdog>=4.0.0",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "slack-sdk>=3.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "ipython>=8.0.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
]
trainer = [
    "openai>=1.0.0",
]
corpus = [
    "datasets>=2.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# dev/nlp scripts manipulate sys.path before importing sibling modules
"dev/nlp/*.py" = ["E402"]
# standalone dev/test scripts with sys.path bootstrap before imports
"scripts/*.py" = ["E402"]
# ui entry point bootstraps sys.path before importing the app module
"ui/kscript/__main__.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
norecursedirs = ["_archive"]
# Run the suite in parallel across CPU cores with ``--dist=loadscope``
# (groups tests by module/class).  ``loadscope`` lets large files such as
# tests/test_agent.py split by class for load balancing while keeping each
# class on one worker.  Cross-file fixed-port binds are safe because every
# network port in the suite is unique per test.  Opt out of parallelism with
# ``pytest -n 0`` (e.g. for the tests/test_z_responses_region_isolation.py
# serial ordering check).
addopts = ["-n", "auto", "--dist=loadscope"]
